Added unit tests

--- a/test/absoluteHeight.html
+++ b/test/absoluteHeight.html
@@ -8,17 +8,12 @@
   <script src="libs/qunit.js"></script>
   
   <!-- Load local lib and tests. -->
-  <script src="../src/iframeMessenger.js"></script>
   <script src="qunit_test.js"></script>
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture">
-  	<div id="parent">
-  		<div id="child">
-  			Test content
-  		</div>
-  	</div>
+  	<iframe src=""></iframe>
   </div>
 </body>
 </html>
