--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
         }
     </style>
 
-    <script type="text/javascript" src="https://rawgithub.com/cujojs/curl/master/dist/curl/curl.js"></script>
+    <script type="text/javascript" src="libs/curl.js"></script>
 
 </head>
 <body>
@@ -21,7 +21,7 @@
     </figure>
 
     <script type="text/javascript">
-        curl(['http://interactive.guim.co.uk/embed/iframe-wrapper/0.1/boot.js']).then(function(app) {
+        curl(['libs/boot.js']).then(function(app) {
             var el = document.querySelector('.interactive');
             app.boot(el);
         });
