--- a/test/tests.html
+++ b/test/tests.html
@@ -13,7 +13,8 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture">
-  	<iframe src=""></iframe>
+  	<iframe src="" id="iframe01"></iframe>
+    <iframe src="" id="iframe02"></iframe>
   </div>
 </body>
 </html>
