--- a/test/iframeContent/no-doctype.html
+++ b/test/iframeContent/no-doctype.html
@@ -20,7 +20,7 @@
   <script src="../../src/iframeMessenger.js"></script>
 </head>
 <body>
-  
+
   	<div id="parent">
   		<div id="child">
   			Test content
@@ -30,7 +30,7 @@
     <script src="http://code.jquery.com/jquery-1.11.0.js"></script>
 
     <script>
-      iframeMessenger.enableAutoResize();
+      iframeMessenger.enableAutoResize({ absoluteHeight: true });
     </script>
 
 </body>
