only setup page when inside an iframe

--- a/demo/iframed-page.html
+++ b/demo/iframed-page.html
@@ -85,10 +85,9 @@
     <script type="text/javascript" src="../src/iframeMessenger.js"></script>
     <script>
         // Auto resize
-		// iframeMessenger.enableAutoResize({
-		// 	absoluteHeight: true 
-		// });
-        iframeMessenger.resize(80);
+		iframeMessenger.enableAutoResize({
+			absoluteHeight: true
+		});
 
         // Parent page link navigation
         var link = document.querySelector('.parentNavLink');
