--- a/demo/multipleIframes_01.html
+++ b/demo/multipleIframes_01.html
@@ -48,7 +48,7 @@
     <script type="text/javascript" src="../src/iframeMessenger.js"></script>
     <script>
         // Auto resize
-		iframeMessenger.enableAutoResize();
+		iframeMessenger.enableAutoResize({ absoluteHeight: true });
     </script>
 </body>
 </html>
