Added getLocation method

--- a/demo/multipleIframes_01.html
+++ b/demo/multipleIframes_01.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <base target="_top">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -36,6 +37,7 @@
 </head>
 <body>
     <div id="wrapper">
+        <a href="http://www.example.com/">Test</a>
         <p>This is a test</p>
         <p>This is a test</p>
         <p>This is a test</p>
