Updated qunit tests and GU boot.js lib

--- a/test/iframeContent/no-doctype.html
+++ b/test/iframeContent/no-doctype.html
@@ -30,7 +30,7 @@
     <script src="http://code.jquery.com/jquery-1.11.0.js"></script>
 
     <script>
-      iframeMessenger.enableAutoResize({ absoluteHeight: true });
+      iframeMessenger.enableAutoResize();
     </script>
 
 </body>
