--- a/test/auto-resize-no-doctype.html
+++ b/test/auto-resize-no-doctype.html
@@ -126,6 +126,23 @@
         // Run tests
         heights.forEach(runTests);
 
+        asyncTest("enableAutoResize() detects image loads:", function() {
+            expect(2);
+
+            var imgHeight = 768;
+
+            function checkTest(event) {
+            var data = JSON.parse(event.data);
+            equal(data.type, 'set-height', 'should send set-height type.');
+            equal(data.value, imgHeight, 'should set specified height');
+            start();
+            }
+
+            setupTest('autoResizeWithImages', null, checkTest);
+        });
+
+
+
     </script>
 </body>
 </html>
