--- a/test/content/iframed-content.html
+++ b/test/content/iframed-content.html
@@ -12,6 +12,7 @@
         html { background: blue; }
         body { background: green; }
         #output { background: yellow; margin: 0; }
+        #test-image { margin: 0; padding: 0; float: left; }
     </style>
 
 </head>
