--- a/test/auto-resize.html
+++ b/test/auto-resize.html
@@ -35,6 +35,7 @@
             }, false);
         }
 
+
         // Tests 
         function runTests(height) { 
 
@@ -120,10 +121,27 @@
                 setupTest('transformedElementsWithMargin', height, checkTest);
             });
 
+
         }
 
         // Run tests
         heights.forEach(runTests);
+
+        asyncTest("enableAutoResize() detects image loads:", function() {
+            expect(2);
+
+            var imgHeight = 768;
+
+            function checkTest(event) {
+            var data = JSON.parse(event.data);
+            equal(data.type, 'set-height', 'should send set-height type.');
+            equal(data.value, imgHeight, 'should set specified height');
+            start();
+            }
+
+            setupTest('autoResizeWithImages', null, checkTest);
+        });
+
 
     </script>
 </body>
